--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body> 
     <div class="header">
       <img src="./images/test.jpg" alt="Header Logo">
       <ul>
@@ -17,25 +17,28 @@
     </div>
 
     <div class="top-content">
-      <h1>This Website is awesome</h1>
+      <div class="top-text">
+      <h1 class="hero-text">This Website is awesome</h1>
       <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-      <button>Sign up</button>
+      <button>Sign up</button></div>
       <img src="./images/top-01/jpg" alt="Placeholder for an image">
     </div>
 
     <div class="middle-content">
       <h1>Some random information.</h1>
-      <div class="card">Card 1
-        <p class="subtext">This is some subtext under an illustration or image</p>
-      </div>
-      <div class="card">Card 2
-        <p class="subtext">This is some subtext under an illustration or image</p>
-      </div>
-      <div class="card">Card 3
-        <p class="subtext">This is some subtext under an illustration or image</p>
-      </div>
-      <div class="card">Card 4
-        <p class="subtext">This is some subtext under an illustration or image</p>
+      <div class="card-grid">
+        <div class="card">Card 1
+          <p class="subtext">This is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">Card 2
+          <p class="subtext">This is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">Card 3
+          <p class="subtext">This is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">Card 4
+          <p class="subtext">This is some subtext under an illustration or image</p>
+        </div>
       </div>
     </div>
 
@@ -43,13 +46,17 @@
       <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
         <p class="quote-name">-Thor, God of Thunder</p>
       </div>
+      
     </div>
 
-    <div class="sign-up-banner">
-      <div class="sign-up-text">Call to action! It's time!
-        <p class="sign-up-body">Sign up for our product by clciking that button right over there!</p>
-      </div>
-      <button class="bottom-button">Sign up</button>
+    <div class="sign-up-container">
+        <div class="sign-up-banner">
+          <div class="sign-up-text">
+          <h3>Call to action! It's time!</h3>
+          <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+          <button>Sign up</button>
+        </div>
     </div>
 
     <div class="footer">
