Finished styling the landing page. Updated the README.md

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body> 
-    <div class="header">
-      <img src="./images/test.jpg" alt="Header Logo">
+    <div class="header">Header Logo
       <ul>
         <li><a href="#">header link one</a></li>
         <li><a href="#">header link two</a></li>
@@ -21,23 +20,25 @@
       <h1 class="hero-text">This Website is awesome</h1>
       <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
       <button>Sign up</button></div>
-      <img src="./images/top-01/jpg" alt="Placeholder for an image">
+      <div class="placeholder-image">
+        <div>This is a placeholder for an image</div>
+      </div>
     </div>
 
     <div class="middle-content">
       <h1>Some random information.</h1>
       <div class="card-grid">
-        <div class="card">Card 1
-          <p class="subtext">This is some subtext under an illustration or image</p>
+        <div class="card"><img src="./images/one.svg" alt="Image of the number one">
+          <div class="subtext">This is some subtext under an illustration or image</div>
         </div>
-        <div class="card">Card 2
-          <p class="subtext">This is some subtext under an illustration or image</p>
+        <div class="card"><img src="./images/two.svg" alt="Image of the number two">
+          <div class="subtext">This is some subtext under an illustration or image</div>
         </div>
-        <div class="card">Card 3
-          <p class="subtext">This is some subtext under an illustration or image</p>
+        <div class="card"><img src="./images/three.svg" alt="Image of the number three">
+          <div class="subtext">This is some subtext under an illustration or image</div>
         </div>
-        <div class="card">Card 4
-          <p class="subtext">This is some subtext under an illustration or image</p>
+        <div class="card"><img src="./images/four.svg" alt="Image of the number four">
+          <div class="subtext">This is some subtext under an illustration or image</div>
         </div>
       </div>
     </div>
